
	--- 9.6.0rc1 released ---

2496.	[bug]		Add sanity length checks to NSID option. [RT #18813]

2495.	[bug]		Tighten RRSIG checks. [RT #18795]

2494.	[bug]		isc/radix.h, dns/sdlz.h and dns/dlz.h were not being
			installed. [RT #18826]

2493.	[bug]		The linux capabilites code was not correctly cleaning
			up after itself. [RT #18767]

2492.	[func]		Rndc status now reports the number of cpus discovered
			and the number of worker threads when running
			multi-threaded. [RT #18273]

2491.	[func]		Attempt to re-use a local port if we are already using
			the port. [RT #18548]

2490.	[port]		aix: work around a kernel bug where IPV6_RECVPKTINFO
			is cleared when IPV6_V6ONLY is set. [RT #18785]

2489.	[port]		solaris: Workaround Solaris's kernel bug about
			/dev/poll:
			http://bugs.opensolaris.org/view_bug.do?bug_id=6724237
			Define ISC_SOCKET_USE_POLLWATCH at build time to enable
			this workaround. [RT #18870]

2488.	[func]		Added a tool, dnssec-dsfromkey, to generate DS records
			from keyset and .key files. [RT #18694]

2487.	[bug]		Give TCP connections longer to complete. [RT #18675]

2486.	[func]		The default locations for named.pid and lwresd.pid
			are now /var/run/named/named.pid and
			/var/run/lwresd/lwresd.pid respectively.

			This allows the owner of the containing directory
			to be set, for "named -u" support, and allows there
			to be a permanent symbolic link in the path, for
			"named -t" support.  [RT #18306]

2485.	[bug]		Change update's the handling of obscured RRSIG
			records.  Not all orphand DS records were being
			removed. [RT #18828]

2484.	[bug]		It was possible to trigger a REQUIRE failure when
			adding NSEC3 proofs to the response in
			query_addwildcardproof().  [RT #18828]

2483.	[port]		win32: chroot() is not supported. [RT #18805]

2482.	[port]		libxml2: support versions 2.7.* in addition
			to 2.6.*. [RT #18806]

	--- 9.6.0b1 released ---

2481.	[bug]		rbtdb.c:matchparams() failed to handle NSEC3 chain
			collisions.  [RT #18812]