@@ -1,6 +1,9 @@
 
 	--- 9.6.0rc1 released ---
 
+2497.	[bug]		Don't add RRSIG bit to NSEC3 bit map for insecure
+			delegation.
+
 2496.	[bug]		Add sanity length checks to NSID option. [RT #18813]
 
 2495.	[bug]		Tighten RRSIG checks. [RT #18795]
